# RCIR_UAV_NEW

./: LICENSE  README.md
RCIR_UAV_NEW/: README.txt
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk/launch/: sdk.launch
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/: CMakeLists.txt  package.xml
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/config/: config.yaml
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/include/RRT/: local_costmap.h  local_planner.h
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/include/mymission/: Mission.h  artifical_potencial_field.h  avoid_obsta_from_mono_radar.h  avoid_obstacle_v2.h  config.h
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/launch/: avoid_obstacle_v2.launch  bi_directional_rrt_star.launch
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/output/: obsta.txt  path.txt
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/output/未命名文件夹/: obsta.txt  path.txt
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/rviz/: local_planner.rviz
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/src/RRT/: local_costmap.cpp  local_costmap_node.cpp  local_planner.cpp  local_planner_node.cpp
RCIR_UAV_NEW/Onboard-SDK-ROS/dji_sdk_demo/src/mymission/: Mission.cpp  artifical_potencial_field.cpp  avoid_obsta_from_mono_radar.cpp  avoid_obstacle_v2.cpp  caitu_lena.cpp  ceshi.cpp
RCIR_UAV_NEW/cam/: CMakeLists.txt  package.xml
RCIR_UAV_NEW/cam/config/: mono_lidar.yaml
RCIR_UAV_NEW/cam/include/cam/: ClusterAnalysis.h  DataPoint.h  FlowVector.h  ekf_radar_camera_fusion.h  mono_lidar_config.h  mono_lidar_fusion.h  obstacle_detection.h  optical_detection.h  orb_detection.h  sparse_optical_flow_gpu.h
RCIR_UAV_NEW/cam/include/cam/fusion_ekf/: ekf_filter.h  ekf_fusion.h  ground_truth_package.h  measurement_package.h
RCIR_UAV_NEW/cam/launch/: fusion_yolo.launch  obstacle_detection_task.launch  pub_new_cam.launch  pub_video.launch  runbag.launch
RCIR_UAV_NEW/cam/msg/: ekf.msg  ekf_data.msg  mono_radar_fusion.msg  rect.msg  rects.msg
RCIR_UAV_NEW/cam/output/: ekf_out.txt  raw_data_out.txt
RCIR_UAV_NEW/cam/src/: ClusterAnalysis.cpp  DataPoint.cpp  FlowVector.cpp  calib_cam_radar.cpp  ekf_radar_camera_fusion.cpp  k-means.cpp  k-means2.cpp  mono_lidar_fusion.cpp  obstacle_detection.cpp  obtflow_avoidobsta.cpp  optical_detection.cpp  orb_detection.cpp  pub_mono_cam.cpp  pub_video.cpp  shishi.cpp  sparse_optical_flow_gpu.cpp
RCIR_UAV_NEW/cam/src/fusion_ekf/: ekf_filter.cpp  ekf_fusion.cpp
RCIR_UAV_NEW/darknet_ros/darknet/: darknet
RCIR_UAV_NEW/darknet_ros/darknet/cfg/: voc.data
RCIR_UAV_NEW/darknet_ros/darknet/data/: voc.names
RCIR_UAV_NEW/darknet_ros/darknet_ros/: CMakeLists.txt
RCIR_UAV_NEW/darknet_ros/darknet_ros/config/: yolov2-tiny-voc.yaml
RCIR_UAV_NEW/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
RCIR_UAV_NEW/darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov2-tiny-voc-yu.cfg  yolov2-tiny-voc.cfg
RCIR_UAV_NEW/darknet_ros/darknet_ros_msgs/msg/: BoundingBox.msg
RCIR_UAV_NEW/ros_canopen/my_radar/: CMakeLists.txt
RCIR_UAV_NEW/ros_canopen/my_radar/include/: objects_radar_node.h
RCIR_UAV_NEW/ros_canopen/my_radar/msg/: objects.msg  rms.msg
RCIR_UAV_NEW/ros_canopen/my_radar/src/: objects_radar_node.cpp
RCIR_UAV_NEW/wit_imu_node/launch/: wit_imu.launch
